--- a/ICTO-SW/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
+++ b/ICTO-SW/A-Z/Exams/TestVision/22-23/2_Examination_22-23.html
@@ -61,13 +61,11 @@
     <li>
         <div class="content-box">
             <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
-                <p>Students need to bring the following to the exam:</p>
-                <ul>
-                    <li>UvA student pass.</li>
-                    <li>Identification (e.g. driving license).</li>
-                    <li>UvAnetID and password to log in on TestVision. If students forget their UvAnetID or password, the AFM'ers can bypass the log in and give the student in question access to TestVision.</li>
-                </ul>
-                <p>Scrap paper is on location, but please be advised that students will need to bring their own pens. Bags will have to be put in lockers in bigger exam locations.</p>
+                <p>To take part in the exam, students will need to be able to identify theirselves with a valid proof of registration (e.g. their UvA pass, ID, passport or driving license) with a recent passport photo. They will also need to know their UvAnetID and password to log in on TestVision. If students forget their UvAnetID or password, the AFM'ers can bypass the log in and give the student in question access to TestVision.
+                <br><br>
+                Scrap paper is on location, but please be advised that students will need to bring their own pens. Bags will have to be put in lockers in bigger exam locations.
+                </p>
+                
             </div>
         </div>
     </li>
