--- a/ICTO-SW/A-Z/Exams/TestVision/22-23/5_FAQ-students_22-23.html
+++ b/ICTO-SW/A-Z/Exams/TestVision/22-23/5_FAQ-students_22-23.html
@@ -51,13 +51,12 @@
     <li>
         <div class="content-box">
             <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
-                <p>To take part in the exam, you'll need to bring the following:</p>
-                <ul>
-                    <li>Your UvA student pass.</li>
-                    <li>A valid form of identification (e.g. your ID, passport or driving license).</li>
-                    <li>Make sure you know your UvAnetID and password by heart to log in on TestVision. Forgot your UvAnetID or password? <a href="https://student.uva.nl/onderwerpen/inloggen-met-je-uvanetid" target="_blank" rel="noopener">Click here</a>.</li>
-                </ul>
-                <p>If the teacher decides to provide scrap paper, you will need to bring your own pen(s). Bags will have to be put in lockers in bigger exam locations.</p>
+                <p>To take part in the exam, you'll need to be able to identify yourself with a valid proof of registration (e.g. your UvA pass, ID, passport or driving license) with a recent passport photo.
+                <br><br>
+                Make sure you know your UvAnetID and password by heart to log in on TestVision. Forgot your UvAnetID or password? <a href="https://student.uva.nl/onderwerpen/inloggen-met-je-uvanetid" target="_blank" rel="noopener">Click here</a>.
+                <br><br>
+                If the teacher decides to provide scrap paper, you will need to bring your own pen(s). Bags will have to be put in lockers in bigger exam locations.
+                </p>
             </div>
         </div>
     </li>
