wijzigingen transcribeer handleidingen

--- a/Access4Students/how-to-transcribe-with-my-media.html
+++ b/Access4Students/how-to-transcribe-with-my-media.html
@@ -1,7 +1,6 @@
-<img src="/courses/28129/files/10743433/preview" alt="banner-transcribe-1.png" />
+<img src="/courses/28129/files/10743598/preview" alt="banner-transcribe-final.png" />
 <blockquote>
-    <p><em>MyMedia can be used to transcribe your audio or video files, making sure that you won't have to spend your time typing out transcripts word for word. You can specify whether your audio or video file contains sensitive information. That way, you can make sure your files are safely stored and automatically deleted after 183 days. You can transcribe your files directly in My Media on Canvas or on the <a
-            href="https://video.uva.nl/">video.uva.nl</a> website.</em></p>
+    <p><em>MyMedia can be used to transcribe your audio or video files, making sure that you won't have to spend your time typing out transcripts word for word. You can specify whether your audio or video file contains sensitive information by using the Confedential Media setting. That way, you can make sure your files are safely stored and automatically deleted after 183 days. You can transcribe your files directly in My Media on Canvas or on the <a href="https://video.uva.nl/"  target="_blank">video.uva.nl</a> website.</em></p>
 </blockquote>
 
 <br>
