--- a/ICTO-SW/A-Z/Tools/kaltura.html
+++ b/ICTO-SW/A-Z/Tools/kaltura.html
@@ -223,8 +223,8 @@
                 aria-expanded="false"> <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a>How do I transcribe audio or video with Kaltura in Canvas?</a></span></span></h3>
         <ul id="t1" style="list-style: none; display: none;">
             <blockquote>
-                <p><em>Kaltura can be used to transcribe your video or audio files, making sure that you won't have to spend your time typing out your transcripts word for word. Using Kaltura allows you to indicate whether your video or audio file contains any sensitive information, ensuring that your files are stored securely and automatically deleted after 183 days. You can transcribe your files directly in My Media on Canvas or on the <a
-                        href="https://video.uva.nl/">video.uva.nl</a> website.</em></p>
+                <p><em>Kaltura can be used to transcribe your audio or video files, making sure that you won't have to spend your time typing out transcripts word for word. You can specify whether your audio or video file contains sensitive information by using the Confedential Media setting. That way, you can make sure your files are safely stored and automatically deleted after 183 days. You can transcribe your files directly in My Media on Canvas or on the <a href="https://video.uva.nl/">video.uva.nl</a> website. 
+                <br><br>You can share <b><a href="https://canvas.uva.nl/courses/28129/pages/how-to-transcribe-audio-or-video-with-mymedia"  target="_blank"> this page</a></b> with <b>students</b> about using MyMedia for transcribing</em></p>
             </blockquote>
 
             <br>
