aanpassingen transcribe instructies

--- a/Access4Students/how-to-transcribe-with-my-media.html
+++ b/Access4Students/how-to-transcribe-with-my-media.html
@@ -223,9 +223,11 @@
                 <span style="font-size: 13pt;"><strong>&nbsp;</strong></span>
             </td>
             <td style="width: 89.5941%; border-style: hidden;">
-                <span style="font-size: 12pt;"><i>Wait a few minutes for your audio transcription to be generated.</i></span>
                 <img style="max-width: 650px;" src="https://canvas.uva.nl/courses/8175/files/10740251/preview" alt="kaltura_setup-captions"/>
                 <br>
+                <br>
+                <br>
+                <span style="font-size: 12pt;"><i>It may take a while for your audio transcription to be generated. Our advice is to keep yourself busy with something else in the meantime.</i></span><br>
                 <br>
                 <br>
             </td>
