transcription tool changes

--- a/Access4Students/how-to-transcribe-with-my-media.html
+++ b/Access4Students/how-to-transcribe-with-my-media.html
@@ -1,6 +1,11 @@
-<img src="/courses/28129/files/10743598/preview" alt="banner-transcribe-final.png" />
+<img src="/courses/28129/files/10765977/preview" alt="kaltura-transcr-banner.png" />
+<br><br>
 <blockquote>
-    <p><em>MyMedia can be used to transcribe your audio or video files, making sure that you won't have to spend your time typing out transcripts word for word. You can specify whether your audio or video file contains sensitive information by using the Confedential Media setting. That way, you can make sure your files are safely stored and automatically deleted after 183 days. You can transcribe your files directly in My Media on Canvas or on the <a href="https://video.uva.nl/"  target="_blank">video.uva.nl</a> website.</em></p>
+    <p><em>
+        MyMedia can be used to transcribe your audio or video files, making sure that you won't have to spend your time typing out transcripts word for word. You can specify whether your audio or video file contains sensitive information by using the Confedential Media setting. That way, you can make sure your files are safely stored and automatically deleted after 183 days. You can transcribe your files directly in My Media on Canvas or on the <a href="https://video.uva.nl/"  target="_blank">video.uva.nl</a> website.
+        <br><br>
+        Please keep in mind that this tool is not originally intended for transcribing, as it is a video platform, so it will probably not work as well as a real transcribing tool. On the other hand, MyMedia (Kaltura) is a UvA app, so it is safer to use this tool than to run sensitive material such as interviews through random apps from the internet.
+    </em></p>
 </blockquote>
 
 <br>
