--- a/ICTO-SW/A-Z/Tools/kaltura.html
+++ b/ICTO-SW/A-Z/Tools/kaltura.html
@@ -222,9 +222,15 @@
         <h3><span class="element_toggler " aria-controls="t1" aria-label="Toggler toggle list visibility"
                 aria-expanded="false"> <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a>How do I transcribe audio or video with Kaltura in Canvas?</a></span></span></h3>
         <ul id="t1" style="list-style: none; display: none;">
+            <br>
             <blockquote>
-                <p><em>Kaltura can be used to transcribe your audio or video files, making sure that you won't have to spend your time typing out transcripts word for word. You can specify whether your audio or video file contains sensitive information by using the Confedential Media setting. That way, you can make sure your files are safely stored and automatically deleted after 183 days. You can transcribe your files directly in My Media on Canvas or on the <a href="https://video.uva.nl/">video.uva.nl</a> website. 
-                <br><br>You can share <b><a href="https://canvas.uva.nl/courses/28129/pages/how-to-transcribe-audio-or-video-with-mymedia"  target="_blank"> this page</a></b> with <b>students</b> about using MyMedia for transcribing</em></p>
+                <p><em>
+                    MyMedia can be used to transcribe your audio or video files, making sure that you won't have to spend your time typing out transcripts word for word. You can specify whether your audio or video file contains sensitive information by using the Confedential Media setting. That way, you can make sure your files are safely stored and automatically deleted after 183 days. You can transcribe your files directly in My Media on Canvas or on the <a href="https://video.uva.nl/"  target="_blank">video.uva.nl</a> website.
+                    <br><br>
+                    <strong>You can share <b><a href="https://canvas.uva.nl/courses/28129/pages/how-to-transcribe-audio-or-video-with-mymedia" target="_blank"> this page</a></b> with students about using MyMedia for transcribing.</strong>
+                    <br><br>
+                    Please keep in mind that this tool is not originally intended for transcribing, as it is a video platform, so it will probably not work as well as a real transcribing tool. On the other hand, MyMedia (Kaltura) is a UvA app, so it is safer to use this tool than to run sensitive material such as interviews through random apps from the internet.
+                </em></p>
             </blockquote>
 
             <br>
