ans weblectures en plagiarism toegevoegd

--- a/ICTO-SW/A-Z/Tools/weblectures.html
+++ b/ICTO-SW/A-Z/Tools/weblectures.html
@@ -1,8 +1,21 @@
 <p><img src="https://canvas.uva.nl/courses/8175/files/9177317/preview" alt="Scherm&shy;afbeelding 2023-08-15 om 13.42.18.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/9177317" data-api-returntype="File" /></p>
 
-<!-- Menubalk met buttons -->
-<a class="btn Button" style="width: auto; margin-right: 7px;" target="_blank" href="https://canvas.uva.nl/enroll/N3HMY8"><i class="icon-plus"></i> <span>&nbsp;&nbsp;Enroll to ICTO Social Sciences on Canvas</span> </a>
-<a class="btn Button" style="width: auto;" target="_blank" href="https://canvas.uva.nl/courses/8175/pages/contact" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;&nbsp;Contact ICTO</span></a>
+<div class="grid-row">
+    <div class="col-xs-12 col-md-20">
+        <div class="styleguide-section__grid-demo-element">
+            <div class="content-box pad-box-mini border border-trbl border-round"
+                style="background-color: #fafafa; text-align: center;"><a class="btn Button" style="margin: 5px;"
+                    href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a> <a
+                    class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z"
+                    data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z"
+                    data-api-returntype="Page"><i class="icon-copy-course"></i> <span>&nbsp;View all topics (A-Z)</span>
+                </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact"
+                    data-api-returntype="Page"
+                    data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i
+                        class="icon-group"></i><span>&nbsp;Contact</span> </a></div>
+        </div>
+    </div>
+</div>
 
 <p>&nbsp;</p>
 
