--- a/Redesign/tools-perusall-quickstart.html
+++ b/Redesign/tools-perusall-quickstart.html
@@ -324,12 +324,12 @@ ul.further-instructions {
 /* Back to top knop */
 
 p.back-to-top {
-    margin:50px 0 10px 0;
+    margin:0 0 30px 25px;
 }
 
 a.back-to-top {
     color:#2D3B45;
-    padding:8px 10px;
+    padding:10px 10px 8px 10px;
     border-radius:5pt;
     border-top:1px solid #f2f2f2;
     border-left:1px solid #f2f2f2;
@@ -665,12 +665,6 @@ a.back-to-top:hover {
             </div>
 
         </ol>
-
-        <!-- Back to top knop -->
-        <p class="back-to-top">
-            <a class="back-to-top" href="#header-icto" style="text-decoration:none"> <i class="icon-arrow-open-up subtopic-icon"></i>Back to top</a>
-        </p>
-
         </div>
     </div>
 
@@ -678,7 +672,7 @@ a.back-to-top:hover {
     <div class="col-md-3 right-container">
         <div class="styleguide-section__grid-demo-element">
             <ul class="subtopics-ul">
-                <li class="subtopic-li"><a href="#" style="text-decoration: none;" class="ui-priority-primary"><i class="icon-info subtopic-icon"></i>About</a></li>
+                <li class="subtopic-li"><a href="https://canvas.uva.nl/courses/45162/pages/tools-perusall-about" style="text-decoration: none;" class="ui-priority-primary"><i class="icon-info subtopic-icon"></i>About</a></li>
                 <li class="subtopic-li current-sub"><a href="#" style="text-decoration: none;" class="ui-priority-primary"><i class="icon-quiz subtopic-icon"></i>Quickstart</a></li>
                 <li class="subtopic-li"><a href="#" style="text-decoration: none;" class="ui-priority-primary"><i class="icon-standards subtopic-icon"></i>Copyright</a></li>
                 <li class="subtopic-li"><a href="#" style="text-decoration: none;" class="ui-priority-primary"><i class="icon-group subtopic-icon"></i>Grouping</a></li>
@@ -689,6 +683,12 @@ a.back-to-top:hover {
         </div>
     </div>
 </div>
+
+<!-- Back to top knop -->
+<p class="back-to-top">
+    <a class="back-to-top" title="Go back to the top of this page" href="#header-icto" style="text-decoration:none"><i class="icon-arrow-open-up"></i></a>
+    <a class="back-to-top" href="https://canvas.uva.nl/courses/45162/pages/tools-perusall-about" style="text-decoration:none">Need help?</a>
+</p>
 
 <!-- Footer -->
 <div class="footer-icto">
