--- a/Redesign/03. Tools/Perusall/tools-perusall-quickstart.html
+++ b/Redesign/03. Tools/Perusall/tools-perusall-quickstart.html
@@ -399,13 +399,14 @@ a.back-to-top:hover {
     <li class="non-current"><a style="text-decoration:none;" href="#">Home</a></li>
     <li class="non-current"><a style="text-decoration:none;" href="#">Contact</a></li>
     <li class="non-current"><a style="text-decoration:none;" href="#">News</a></li>
+    <li class="non-current"><a style="text-decoration:none;" href="#">A-Z</a></li>
     <li class="non-current"><a style="text-decoration:none;" href="#">All tools</a></li>
     <li class="current"><a style="text-decoration:none;" href="#">Perusall</a></li>
     <li class="enroll"><a style="text-decoration:none;" href="https://canvas.uva.nl/enroll/N3HMY8"><i class="icon-add subtopic-icon"></i>Enroll</a></li>
 </ul>
 
 <!-- Banner image -->
-<img class="banner-img" src="https://canvas.uva.nl/courses/8175/files/10793956/preview">
+<img class="banner-img" src="https://canvas.uva.nl/courses/45162/files/10988147/preview">
 
 <!-- Overview -->
 <div class="overview-icto">
