--- a/ICTO-SW/A-Z/Exams/TestVision/22-23/5_FAQ-students_22-23.html
+++ b/ICTO-SW/A-Z/Exams/TestVision/22-23/5_FAQ-students_22-23.html
@@ -72,7 +72,7 @@
     </li>
 </ul>
 <h3><br /><i class="icon-clock"></i><span style="font-size: 18pt; color: #34495e;"><strong> Extra time</strong></span></h3>
-<h3><span class="element_toggler " aria-controls="FAQ7" aria-label="Toggler toggle list visibility" aria-expanded="false"> <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a>I have a disability and need extra time for the exam. What should I do?</a></span> </span></h3>
+<h3><span class="element_toggler " aria-controls="FAQ7" aria-label="Toggler toggle list visibility" aria-expanded="false"> <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a>I am in need of extra time for the exam. What should I do?</a></span> </span></h3>
 <ul id="FAQ7" style="list-style: none; display: none;">
     <li>
         <div class="content-box">
