Update perusall redesign

--- a/Redesign/03. Tools/Perusall/tools-perusall-copyright-plagiarism.html
+++ b/Redesign/03. Tools/Perusall/tools-perusall-copyright-plagiarism.html
@@ -453,7 +453,7 @@ a.back-to-top:hover {
         <div class="styleguide-section__grid-demo-element">
     
         <!-- Header content -->
-        <h1 class="header-subtopic-left ui-priority-primary">Grading</h1> 
+        <h1 class="header-subtopic-left ui-priority-primary">Copyright & Plagiarism</h1> 
 
         <!-- Introduction text -->
         <div class="inshort">
@@ -507,8 +507,8 @@ a.back-to-top:hover {
                 <li class="subtopic-li"><a href="https://canvas.uva.nl/courses/45162/pages/tools-perusall-quickstart" style="text-decoration: none;" class="ui-priority-primary"><i class="icon-quiz subtopic-icon"></i>Quickstart</a></li>
                 <li class="subtopic-li"><a href="https://canvas.uva.nl/courses/45162/pages/tools-perusall-grouping" style="text-decoration: none;" class="ui-priority-primary"><i class="icon-group subtopic-icon"></i>Grouping</a></li>
                 <li class="subtopic-li"><a href="https://canvas.uva.nl/courses/45162/pages/tools-perusall-analysis" style="text-decoration: none;" class="ui-priority-primary"><i class="icon-stats subtopic-icon"></i>Analysis</a></li>
-                <li class="subtopic-li current-sub"><a href="#" style="text-decoration: none;" class="ui-priority-primary"><i class="icon-assignment subtopic-icon"></i>Grading</a></li>
-                <li class="subtopic-li"><a href="https://canvas.uva.nl/courses/45162/pages/tools-perusall-copyright-plagiarism" style="text-decoration: none;" class="ui-priority-primary"><i class="icon-collection subtopic-icon"></i>Copyright & Plagiarism</a></li>
+                <li class="subtopic-li"><a href="https://canvas.uva.nl/courses/45162/pages/tools-perusall-grading" style="text-decoration: none;" class="ui-priority-primary"><i class="icon-assignment subtopic-icon"></i>Grading</a></li>
+                <li class="subtopic-li current-sub"><a href="#" style="text-decoration: none;" class="ui-priority-primary"><i class="icon-collection subtopic-icon"></i>Copyright & Plagiarism</a></li>
             </ul>
 
         </div>
