--- a/Redesign/03. Tools/Perusall/tools-perusall-about.html
+++ b/Redesign/03. Tools/Perusall/tools-perusall-about.html
@@ -206,6 +206,7 @@ p.difficulty-percentage {
 h3.about-header {
     font-size:12pt;
     padding: 10pt;
+    border-bottom:1px solid #b9cbdf;
 }
 
 h3.about-header:hover {
