--- a/Redesign/03. Tools/Perusall/tools-perusall-quickstart.html
+++ b/Redesign/03. Tools/Perusall/tools-perusall-quickstart.html
@@ -500,7 +500,7 @@ a.back-to-top:hover {
                     <li>Tick the box in front of <span class="button-ref canvas-white">Load this tool in a new tab</span>
 
                         <!-- Afbeelding -->
-                        <img class="toelichting-step" style="width: 70%;" src="https://canvas.uva.nl/courses/45162/files/10818478/preview">
+                        <img style="width: 70%;" src="https://canvas.uva.nl/courses/45162/files/10818478/preview">
 
                     </li>                    
                     <li>Name the assignment, assign it to everyone, fill in a due date and click <span class="button-ref canvas-red">Save</span></li>                
@@ -531,7 +531,7 @@ a.back-to-top:hover {
                     <li>Click on <span class="button-ref canvas-white">Documents from my device</span> to upload a document from your own computer
 
                         <!-- Afbeelding -->
-                        <img class="toelichting-step" style="width: 100%;" src="https://canvas.uva.nl/courses/45162/files/10818993/preview">
+                        <img style="width: 100%;" src="https://canvas.uva.nl/courses/45162/files/10818993/preview">
 
                     </li>                    
                     <li>Select the document you wish to upload to Perusall</li>
